--- a/style.css
+++ b/style.css
@@ -2,3 +2,14 @@
   width: 100%;
   height: 100%;
 }
+body {
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  margin:1rem;
+  padding:1rem;
+}
+canvas {
+  border: solid 2px black;
+}
